--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -118,3 +118,7 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/Map.Map
+GameDefaultMap=/Game/Levels/Map.Map
+
