--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,3 +122,17 @@ r.LightPropagationVolume=False
 EditorStartupMap=/Game/Levels/Map.Map
 GameDefaultMap=/Game/Levels/Map.Map
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=F52FC0544F8EB09D21409790A735AB4B
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
